Fixed bug where new items did not stack Fixed bug where conditions did not apply to your own creatures Fixed alignment in various components

--- a/src/styles.css
+++ b/src/styles.css
@@ -1113,7 +1113,7 @@ header.featureHeader {
     text-align: left;
 }
 
-.newrow:not(.left-aligned):not(.center-aligned)>*:last-child:not(:first-child):not(.center-aligned) {
+.newrow:not(.left-aligned):not(.center-aligned)>*:last-child:not(:first-child):not(.left-aligned):not(.center-aligned) {
     text-align: right;
     flex-grow: 1;
 }
